# gdb-tools

./: .gitignore  LICENSE  README.md  pretty_printer.py  setup.cfg  setup.py
duel/: __init__.py  expr.py  help.md  help.py  parser.py  test.c  test.gdb  test.out
gdb_pretty/: __init__.py  pretty_printer.py
pretty_printer/: __init__.py
tests/: test.c  test.cc  test.gdb  test.out  test.py
