[metadata]
name = gdb-tools
version = 1.4
author = Sergei Golubchik
author_email = vuvova@gmail.com
description = Various tools to improve the gdb experience
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vuvova/gdb-tools
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development :: Debuggers

[options]
packages =
    duel
    pretty_printer
install_requires = arpeggio

[options.package_data]
duel = help.md
